@@ -1,3 +1,10 @@
+2002-08-06  Daniel Jacobowitz  <drow@mvista.com>
+
+	Merge from mainline:
+	2002-08-01  H.J. Lu <hjl@gnu.org>
+	* gas/mips/elf-rel6.s: Add ".p2align 4".
+	* gas/mips/elf-rel6.d: Check nop.
+
 2002-08-01  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline:
